[gd_scene load_steps=4 format=1]

[ext_resource path="res://menu/menu.gd" type="Script" id=1]
[ext_resource path="res://triangle.png" type="Texture" id=2]
[ext_resource path="res://triangle_ra.png" type="Texture" id=3]

[node name="menu" type="Node2D"]

script/script = ExtResource( 1 )

[node name="container" type="Node2D" parent="."]

[node name="button_up" type="TextureButton" parent="."]

rect/scale = Vector2( 0.3, 0.3 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 995.0
margin/top = 260.0
margin/right = 1195.0
margin/bottom = 460.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 2 )

[node name="button_down" type="TextureButton" parent="."]

rect/scale = Vector2( 0.3, 0.3 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 995.0
margin/top = 410.0
margin/right = 1195.0
margin/bottom = 610.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 2 )
params/scale = Vector2( 1, -1 )

[node name="button_back" type="TextureButton" parent="."]

rect/scale = Vector2( 0.3, 0.3 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 995.0
margin/top = 610.0
margin/right = 1195.0
margin/bottom = 810.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )

[connection signal="pressed" from="button_up" to="." method="_on_button_up_pressed"]

[connection signal="pressed" from="button_down" to="." method="_on_button_down_pressed"]

[connection signal="pressed" from="button_back" to="." method="_on_button_back_pressed"]


